--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <body>
         <div class="calc-body">
             <div class="display">
-                
+                <p class="current-num"></p>
             </div>
             <div class="buttons">
                 <div>
@@ -17,28 +17,29 @@
                 </div>
 
                 <div>
-                    <button>7</button>
-                    <button>8</button>
-                    <button>9</button>
-                    <button class="divide">÷</button>
+                    <button class="number">7</button>
+                    <button class="number">8</button>
+                    <button class="number">9</button>
+                    <button class="divide operator">÷</button>
                     <br>
-                    <button>4</button>
-                    <button>5</button>
-                    <button>6</button>
-                    <button class="multiply">×</button>
+                    <button class="number">4</button>
+                    <button class="number">5</button>
+                    <button class="number">6</button>
+                    <button class="multiply operator">×</button>
                     <br>
-                    <button>1</button>
-                    <button>2</button>
-                    <button>3</button>
-                    <button class="subtract">-</button>
+                    <button class="number">1</button>
+                    <button class="number">2</button>
+                    <button class="number">3</button>
+                    <button class="subtract operator">-</button>
                     <br>
-                    <button>0</button>
-                    <button>.</button>
-                    <button class="compute">=</button>
-                    <button class="add">+</button>
+                    <button class="number">0</button>
+                    <button class="number">.</button>
+                    <button class="compute operator">=</button>
+                    <button class="add operator">+</button>
                 </div>
             </div>
-
         </div>
+
+        <script src="script.js"></script>
     </body>
 </html>
