--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
             </div>
             <div class="buttons">
                 <div>
-                    <button class="delete">Delete</button>
-                    <button class="clear">Clear</button>
+                    <button class="delete">DELETE</button>
+                    <button class="clear">CLEAR</button>
                 </div>
 
                 <div>
